[package]
name = "wasm-spec"
version = "0.0.1"
description = "Web Assembly specification (cloned from https://github.com/WebAssembly/spec)"
repository = "https://github.com/asajeffrey/wasm-spec"
readme = "README.md"
keywords = [ "wasm", "web assembly" ]
license = "Apache-2.0"

[lib]
path = "lib.rs"
